change searchbar icon size and fix spacing

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -72,6 +72,7 @@ body {
 
 .searchBar {
   border: 1px solid #DADADA;
+  margin-top: 5px;
   margin-left: 30px;
   padding-bottom: 5px;
   border-radius: 4px;
@@ -85,7 +86,7 @@ input:focus {
 input.search {
   padding-left: 10px;
   border: none;
-  font-size: 25px;
+  font-size: 20px;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -96,6 +97,7 @@ input.search::placeholder {
 i.fa-search {
   padding: 10px 5px 5px 10px;
   color: #DADADA;
+  font-size: 30px;
 }
 
 /* Logo */
